@@ -18,7 +18,7 @@ module IRB
       def execute(&block)
 	pid = send ExtendCommand.irb_original_method_name("fork")
 	unless pid
-	  class<<self
+	  class << self
 	    alias_method :exit, ExtendCommand.irb_original_method_name('exit')
 	  end
 	  if iterator?
